# GIFusion

./: CMakeLists.txt  LICENSE  README.md
src/GIFusion/include_impl/: GIFusion.h  types.h
src/GIFusion/include_interface/: GIFusionInterface.h
src/GIFusion/src/: GIFusion.cpp
